--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -33,6 +33,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.doc|.*\\.xls" .		   # Word, Excel
 		"|.*\\.ppt" .	                   # PowerPoint
 		"|.*\\.tex" .   		   # TeX
+		"|.*\\.ps" .   		   	   # PostScript
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
