Added 2 test data (postscript).

--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -25,4 +25,5 @@ EXTRA_DIST  =   acrobat3.pdf \
 		word97.doc \
 		word98.doc \
 		word2000.doc \
-		powerpoint97.ppt
+		powerpoint97.ppt \
+		postscript.ps
