--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -180,17 +180,17 @@ $NKF = "@NKF@";
 #
 # KAKASI
 #
-$KAKASI = "@KAKASI@ -ieuc -oeuc -w";
+$KAKASI = "@DO_KAKASI@";
 
 #
 # ChaSen 1.51 or later (simple wakatigaki)
 #
-$CHASEN = "@CHASEN@ -j -F '\%m '";
+$CHASEN = "@DO_CHASEN@";
 
 #
 # ChaSen 1.51 or later (with noun words extraction)
 #
-$CHASEN_NOUN = "@CHASEN@ -j -F '\%m %H\\n'";
+$CHASEN_NOUN = "@DO_CHASEN_NOUN@";
 
 #
 # Default Japanese processer: KAKASI or ChaSen.
