--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -28,12 +28,10 @@ $HTML_SUFFIX = "html?|[ps]html|html\\.[a-z]{2}";
 #
 $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gz|.*\\.Z|.*\\.bz2" .       # Compressed files
-		"|.*\\.pdf" . 			   # PDF
+		"|.*\\.pdf|.*\\.ps" . 		   # PDF, PostScript
 		"|.*\\.tex" .   		   # TeX
-		"|.*\\.doc|.*\\.xls" .		   # Word, Excel
+		"|.*\\.doc|.*\\.xls|.*\\.ppt" .	   # Word, Excel
 		"|.*\\.ppt" .	                   # PowerPoint
-		"|.*\\.tex" .   		   # TeX
-		"|.*\\.ps" .   		   	   # PostScript
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
