--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -30,8 +30,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gz|.*\\.Z|.*\\.bz2" .       # Compressed files
 		"|.*\\.pdf|.*\\.ps" . 		   # PDF, PostScript
 		"|.*\\.tex" .   		   # TeX
-		"|.*\\.doc|.*\\.xls|.*\\.ppt" .	   # Word, Excel
-		"|.*\\.ppt" .	                   # PowerPoint
+		"|.*\\.doc|.*\\.xls|.*\\.ppt" .	   # Word, Excel, PowerPoint
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
