2001-01-02  Hajime BABA  <baba@kusastro.kyoto-u.ac.jp>
	* tests/data/en/tex.tex: Fixed preamble: jarticle -> article

	* filter/win32/Makefile.am: Added an entry for olertf.pl

	* filter/dvi.pl: Added a new file.

	* tests/data/{en,ja}/dvi.dvi: Added new files for testsuite.

	* filter/rpm.pl: Added a new file.

	* tests/data/{en,ja}/rpm.rpm: Added new files for testsuite.

	* filter/deb.pl: Added a new file.  NOTE: no testsuite is added.

	* filter/Makefile.am: Added entries for dvi.pl, rpm.pl and deb.pl

	* pl/conf.pl.in: Addes entries for DVI, RPM and DEB.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -30,7 +30,10 @@ filter_DATA = bzip2.pl \
 	      powerpoint.pl \
 	      taro.pl \
 	      hdml.pl \
-	      postscript.pl
+	      postscript.pl \
+	      dvi.pl \
+	      rpm.pl \
+	      deb.pl
 
 EXTRA_DIST = $(filter_DATA)
 
