--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -29,7 +29,8 @@ $HTML_SUFFIX = "html?|[ps]html|html\\.[a-z]{2}";
 $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gz|.*\\.Z|.*\\.bz2" .       # Compressed files
 		"|.*\\.pdf|.*\\.ps" . 		   # PDF, PostScript
-		"|.*\\.tex" .   		   # TeX
+		"|.*\\.tex|.*\\.dvi" .   	   # TeX, DVI
+		"|.*\\.rpm|.*\\.deb" .   	   # RPM, DEB
 		"|.*\\.doc|.*\\.xls|.*\\.ppt" .	   # Word, Excel, PowerPoint
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
