* scripts/mknmz.in (namazu_core): Applied patch which displayes 	pathname including Japanese correctly on Win32/OS2 system. 	Courtesy by Mitsuo Satou (namazu-win32-users-ja#00540).
	* filter/win32/olepowerpoint.pl: Fixed waste opening of PPT
	(set $ppt->{Visible}=0), magic numbers and indentation.

	* filter/win32/oleexcel.pl: Fixed for password authentificated
	files, some magic numbers and indentation.

	* filter/win32/olemsword.pl: Fixed magic numbers and indentation.

	* filter/win32/olertf.pl: Fixed indentation.

	* filter/win32/oletaro.pl: Substitution for oletaro[45678].pl
	Thanks to Yoshinori.TAKESAKO (namazu-win32-users-ja#00558).

	* filter/win32/{oletaro[45678].pl}: Obsolete.

	* filter/win32/Makefile.am: Added oletaro.pl, removed [45678].pl

--- a/filter/win32/Makefile.am
+++ b/filter/win32/Makefile.am
@@ -8,11 +8,7 @@ filter_DATA = olemsword.pl \
 	     oleexcel.pl \
 	     olepowerpoint.pl \
 	     ichitaro456.pl \
-	     oletaro4.pl \
-	     oletaro5.pl \
-	     oletaro6.pl \
-	     oletaro7.pl \
-	     oletaro8.pl \
+	     oletaro.pl \
 	     olertf.pl
 
 EXTRA_DIST = $(filter_DATA)
