--- a/tests/data/filter/Makefile.am
+++ b/tests/data/filter/Makefile.am
@@ -1,2 +1,3 @@
 ## Process this file with automake to produce Makefile.in
-EXTRA_DIST =	testfilter.pl
+EXTRA_DIST =	testfilter.pl \
+		filter-test.txt
