Added tests/data/filter/Makefile in AC_OUTPUT.

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.133 2001-02-26 08:47:10 baba Exp $
+dnl $Id: configure.in,v 1.134 2001-04-03 07:36:25 knok Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -426,6 +426,7 @@ AC_OUTPUT([Makefile
 	   tests/data/en/Makefile
 	   tests/data/query/Makefile
 	   tests/data/html-split/Makefile
+	   tests/data/filter/Makefile
 	  ],
 	  [chmod +x nmz-config \
 		    scripts/bnamazu \
