--- a/namazu.spec.in
+++ b/namazu.spec.in
@@ -1,38 +1,67 @@
-%define ver	@VERSION@
-%define  RELEASE 1
-%define  rel     %{?CUSTOM_RELEASE} %{!?CUSTOM_RELEASE:%RELEASE}
-%define prefix	/usr
-%define sysconfdir	/etc
-%define localstatedir	/var/lib
+# XXX is this right - it was /var/lib before FHS macros
+%define _localstatedir	/var/lib
+%define _libexecdir	/var/www/cgi-bin
 
-Summary: Namazu is a search engine intented for easy use
+Summary: Namazu is a full-text search engine
 Name: namazu
-Version: %ver
-Release: %rel
+Version: @VERSION@
+Release: 1
 Copyright: GPL
 Group: Applications/Text
-Requires: perl >= 5.004, perl-File-MMagic >= 0.20, perl-NKF >= 1.70
+BuildRequires: perl, perl-NKF >= 1.70, perl-Text-Kakasi >= 1.00
+Requires: perl, perl-File-MMagic >= 1.12, perl-NKF >= 1.70
 Requires: kakasi >= 2.3.0, perl-Text-Kakasi >= 1.00
-Source: namazu-%{ver}.tar.gz
+Source: http://www.namazu.org/stable/%{name}-%{version}.tar.gz
 URL: http://www.namazu.org/
-BuildRoot: /var/tmp/namazu-%{ver}-root
+BuildRoot: %{_tmppath}/%{name}-buildroot
 
 %description
-Namazu is a search engine software intended for easy use.  Not
-only it works as CGI program for small or medium scale WWW search
-engine, but also works as personal use such as search system for
-local HDD.  Now, search clients for Mule and Tcl/Tk, JAVA and
-Win32 are available.
+Namazu is a full-text search engine software intended for easy use.
+Not only it works as CGI program for small or medium scale WWW
+search engine, but also works as personal use such as search system
+for local HDD.
 
 %package devel
 Summary: Libraries and include files of Namazu
 Group: Development/Libraries
-Requires: %name = %{PACKAGE_VERSION}
+Requires: %{name} = %{version}
 
 %description devel
 Libraries and include files of Namazu.
 
+%package cgi
+Summary: a CGI interface for Namazu
+Group: Applications/Text
+Requires: %{name} = %{version}
+Requires: webserver
+
+%description cgi
+A CGI interface for Namazu.
+
 %changelog
+* Sat Jun 23 2001 Ryuji Abe <rug@namazu.org>
+- fix summary and %description
+
+* Thu May 31 2001 Ryuji Abe <rug@namazu.org>
+- fix %files
+- fix again cgi-bin location to /var/www/cgi-bin
+
+* Mon May 28 2001 Ryuji Abe <rug@namazu.org>
+- clean up spec file
+- more macros
+- provide cgi package
+- fix cgi-bin location /home/httpd/cgi-bin to /var/www/namazu-cgi-bin
+
+* Wed Mar 21 2001 Ryuji Abe <rug@namazu.org>
+- Rebuilt for 7.1 beta
+- more macros
+- fix dependencies
+- exclude unnessesary ja_JP.SJIS catalog.
+
+* Thu Oct 26 2000 Ryuji Abe <rug@namazu.org>
+- Requires perl-File-MMagic >= 1.09.
+- Add BuildRequires.
+
 * Tue Aug 22 2000 Ryuji Abe <rug@namazu.org>
 - Fixed %localstatedir /var to /var/lib.
 
@@ -87,22 +116,11 @@ Libraries and include files of Namazu.
 - 
 
 %prep 
-%setup
+%setup -q
 
 %build
-if [ ! -f configure ]; then
-CFLAGS="$RPM_OPT_FLAGS" ./autogen.sh \
-	--prefix=%prefix \
-	--sysconfdir=%sysconfdir \
-	--localstatedir=%localstatedir \
-	--libexecdir=/home/httpd/cgi-bin
-else
-CFLAGS="$RPM_OPT_FLAGS" ./configure \
-	--prefix=%prefix \
-	--sysconfdir=%sysconfdir \
-	--localstatedir=%localstatedir \
-	--libexecdir=/home/httpd/cgi-bin
-fi
+%configure
+
 if [ "$SMP" != "" ]; then
   make -j$SMP "MAKE=make -j$SMP"
 else
@@ -110,50 +128,50 @@ else
 fi
 
 %install
-rm -rf $RPM_BUILD_ROOT
-make prefix=$RPM_BUILD_ROOT%{prefix} \
-     sysconfdir=$RPM_BUILD_ROOT%{sysconfdir} \
-     localstatedir=$RPM_BUILD_ROOT%{localstatedir} \
-     libexecdir=$RPM_BUILD_ROOT/home/httpd/cgi-bin \
-     install
-mv $RPM_BUILD_ROOT%{sysconfdir}/namazu/namazurc-sample \
-	$RPM_BUILD_ROOT%{sysconfdir}/namazu/namazurc
-mv $RPM_BUILD_ROOT%{sysconfdir}/namazu/mknmzrc-sample \
-	$RPM_BUILD_ROOT%{sysconfdir}/namazu/mknmzrc
-chmod a+rw -R $RPM_BUILD_ROOT%{localstatedir}/namazu
-chmod a+rw -R $RPM_BUILD_ROOT%{localstatedir}/namazu/index
-strip $RPM_BUILD_ROOT%{prefix}/bin/namazu
+rm -rf %{buildroot}
+%makeinstall
+
+mv %{buildroot}%{_sysconfdir}/namazu/namazurc-sample \
+	%{buildroot}%{_sysconfdir}/namazu/namazurc
+mv %{buildroot}%{_sysconfdir}/namazu/mknmzrc-sample \
+	%{buildroot}%{_sysconfdir}/namazu/mknmzrc
+chmod a+rw -R %{buildroot}%{_localstatedir}/namazu
+chmod a+rw -R %{buildroot}%{_localstatedir}/namazu/index
+
+%find_lang %{name}
 
 %clean
-rm -rf $RPM_BUILD_ROOT
+rm -rf %{buildroot}
 
 %post -p /sbin/ldconfig
 %postun -p /sbin/ldconfig
 
-%files
+%files -f %{name}.lang
 %defattr(-, root, root)
 %doc AUTHORS ChangeLog ChangeLog.1 CREDITS COPYING INSTALL INSTALL-ja
 %doc README README-es README-ja NEWS THANKS TODO etc/namazu.png
-%config %{sysconfdir}/namazu/*
-%{prefix}/bin/namazu
-%{prefix}/bin/*nmz
-%{prefix}/bin/mailutime
-%{prefix}/bin/nmzgrep
-%{prefix}/lib/libnmz.so.*
-/home/httpd/cgi-bin/namazu.cgi
-%{prefix}/man/man1
-%{prefix}/share/locale/*
-%{prefix}/share/namazu/doc/*
-%{prefix}/share/namazu/filter/*
-%{prefix}/share/namazu/pl/*
-%{prefix}/share/namazu/template/*
-%dir %{localstatedir}/namazu
-%dir %{localstatedir}/namazu/index
+%config %{_sysconfdir}/namazu/*
+%{_bindir}/namazu
+%{_bindir}/bnamazu
+%{_bindir}/*nmz
+%{_bindir}/mailutime
+%{_bindir}/nmzgrep
+%{_libdir}/*.so.*
+%{_mandir}/man1/*
+%{_datadir}/namazu/doc/*
+%{_datadir}/namazu/filter/*
+%{_datadir}/namazu/pl/*
+%{_datadir}/namazu/template/*
+%dir %{_localstatedir}/namazu
+%dir %{_localstatedir}/namazu/index
 
 %files devel
 %defattr(-, root, root)
-%{prefix}/bin/nmz-config
-%{prefix}/include/namazu/*.h
-%{prefix}/lib/libnmz.so
-%{prefix}/lib/libnmz.la
-%{prefix}/lib/libnmz.a
+%{_bindir}/nmz-config
+%{_includedir}/namazu/*.h
+%{_libdir}/*.so
+%{_libdir}/*a
+
+%files cgi
+%defattr(-, root, root)
+%{_libexecdir}/namazu.cgi
