--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.136 2001-06-21 06:21:32 rug Exp $
+dnl $Id: configure.in,v 1.137 2001-06-25 04:20:25 rug Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -418,6 +418,7 @@ AC_OUTPUT([Makefile
 	   scripts/vfnmz
 	   scripts/lnnmz
 	   scripts/adnmz
+	   scripts/nmzmerge
 	   src/Makefile
 	   template/Makefile
 	   tests/Makefile
@@ -437,6 +438,7 @@ AC_OUTPUT([Makefile
 		    scripts/vfnmz \
 		    scripts/lnnmz \
 		    scripts/adnmz \
+		    scripts/nmzmerge \
 	    ]) 
 
 # Local Variables:
