--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.138 2001-06-25 10:31:08 rug Exp $
+dnl $Id: configure.in,v 1.139 2001-07-10 08:57:33 knok Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -30,7 +30,7 @@ dnl *
 LTVERSION="5:0:2"
 AC_SUBST(LTVERSION)
 
-AM_INIT_AUTOMAKE(namazu, 2.1.0)
+AM_INIT_AUTOMAKE(namazu, 2.0.6pre2)
 AM_MAINTAINER_MODE
 
 dnl *
@@ -418,16 +418,18 @@ AC_OUTPUT([Makefile
 	   scripts/vfnmz
 	   scripts/lnnmz
 	   scripts/adnmz
-	   scripts/nmzmerge
 	   src/Makefile
 	   template/Makefile
 	   tests/Makefile
 	   tests/data/Makefile
 	   tests/data/ja/Makefile
+	   tests/data/ja-spec/Makefile
 	   tests/data/en/Makefile
 	   tests/data/query/Makefile
 	   tests/data/html-split/Makefile
 	   tests/data/filter/Makefile
+	   tests/data/emphasize/Makefile
+	   tests/data/dup-field/Makefile
 	  ],
 	  [chmod +x nmz-config \
 		    scripts/bnamazu \
@@ -438,7 +440,6 @@ AC_OUTPUT([Makefile
 		    scripts/vfnmz \
 		    scripts/lnnmz \
 		    scripts/adnmz \
-		    scripts/nmzmerge \
 	    ]) 
 
 # Local Variables:
