--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.139 2001-07-10 08:57:33 knok Exp $
+dnl $Id: configure.in,v 1.140 2001-08-08 09:05:44 knok Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -15,9 +15,6 @@ dnl *
 AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
 
-dnl *
-dnl * libtool versioning.
-dnl *
 
 # Before making a release, the LTVERSION string should be modified.
 # The string is of the form C:R:A.
@@ -30,7 +27,7 @@ dnl *
 LTVERSION="5:0:2"
 AC_SUBST(LTVERSION)
 
-AM_INIT_AUTOMAKE(namazu, 2.0.6pre2)
+AM_INIT_AUTOMAKE(namazu, 2.0.6rc7)
 AM_MAINTAINER_MODE
 
 dnl *
@@ -55,16 +52,6 @@ AC_SUBST(COPYRIGHT)
 AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT", [Namazu Copyright])
 
 
-dnl *
-dnl * libtool
-dnl *
-AM_PROG_LIBTOOL
-
-dnl This option requires config.guess, config.sub and install-sh
-dnl AC_CANONICAL_SYSTEM
-
-AC_ISC_POSIX
-
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -76,6 +63,11 @@ if test -n "$GCC"; then
     CFLAGS="$CFLAGS -Wall -pedantic"
 fi
 
+dnl This option requires config.guess, config.sub and install-sh
+dnl AC_CANONICAL_SYSTEM
+
+AC_ISC_POSIX
+
 dnl OS specific.
 AC_EXEEXT
 AC_OBJEXT
@@ -84,6 +76,22 @@ if test -n "$EMXOS2"; then
     CFLAGS="$CFLAGS -Zmtd"
     LDFLAGS="$LDFLAGS -Zmtd -Zcrtdll -Zsysv-signals -Zbin-files"
 fi
+
+dnl *
+dnl * libtool
+dnl *
+AC_PROG_LIBTOOL
+
+# Before making a release, the LTVERSION string should be modified.
+# The string is of the form C:R:A.
+# - If interfaces have been changed or added, but binary compatibility has
+#   been preserved, change to C+1:0:A+1
+# - If binary compatibility has been broken (eg removed or changed interfaces)
+#   change to C+1:0:0
+# - If the interface is the same as the previous version, change to C:R+1:A
+
+LTVERSION="5:0:2"
+AC_SUBST(LTVERSION)
 
 dnl *
 dnl * I18N
