--- a/scripts/adnmz.in
+++ b/scripts/adnmz.in
@@ -1,7 +1,7 @@
-#! @PERL@
+#! %PERL%
 # -*- Perl -*-
 # adnmz.pl - make NMZ.field.adjacency
-# $Id: adnmz.in,v 1.1 2001-02-26 08:47:14 baba Exp $
+# $Id: adnmz.in,v 1.2 2001-08-08 09:05:50 knok Exp $
 #
 # Copyright (C) 2001 Hajime BABA  All rights reserved.
 # Copyright (C) 2001 Namazu Project  All rights reserved.
