--- a/scripts/lnnmz.in
+++ b/scripts/lnnmz.in
@@ -1,7 +1,7 @@
-#! @PERL@
+#! %PERL%
 # -*- Perl -*-
 # lnnmz - program to make NMZ.field.link
-# $Id: lnnmz.in,v 1.1 2001-02-26 08:47:14 baba Exp $
+# $Id: lnnmz.in,v 1.2 2001-08-08 09:05:50 knok Exp $
 #
 # Copyright (C) 2000 osamu2001@livedoor.com  All rights reserved.
 # Copyright (C) 2000 furukawa@tcp-ip.or.jp  All rights reserved.
