--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.87 2001-08-08 09:05:50 knok Exp $
+# $Id: mknmz.in,v 1.88 2001-08-12 06:11:03 rug Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000,2001 Namazu Project All rights reserved.
@@ -1238,7 +1238,8 @@ sub load_target_list ($) {
 sub absolute_path($$) {
     my ($cwd, $path) = @_;
 
-    $path =~ s!^\./!$cwd/!;
+    $path =~ s!^\.$!\./!;
+    $path =~ s!^\.[/\\]!$cwd/!;
     if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")) {
 	    $path =~ s!([\x81-\x9f\xe0-\xef][\x40-\x7e\x80-\xfc]|[\x01-\x7f])!
 	    $1 eq "\\" ? "/" : $1!gex;
