--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,7 @@
-# $Id: Makefile.am,v 1.12 2000-09-05 05:47:42 rug Exp $ 
+# $Id: Makefile.am,v 1.13 2001-09-01 11:47:24 rug Exp $ 
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 
-EXTRA_DIST = alloca.c strstr.c
+EXTRA_DIST = strstr.c
 
 noinst_LIBRARIES = libnmzut.a
 libnmzut_a_SOURCES = getopt.c getopt1.c getopt.h
