--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,11 +1,11 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.37 2001-08-20 07:52:31 rug Exp $
+# $Id: Makefile.am,v 1.38 2001-09-01 11:47:25 rug Exp $
 #
 
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 
-EXTRA_DIST = memcmp.c memmove.c memset.c strcasecmp.c strncasecmp.c \
+EXTRA_DIST = alloca.c memcmp.c memmove.c memset.c strcasecmp.c strncasecmp.c \
 	     strcspn.c strerror.c vsnprintf.c system.h support.h
 
 localedir   = $(prefix)/$(DATADIRNAME)/locale
@@ -32,8 +32,8 @@ libnmz_la_SOURCES = alias.c alias.h codeconv.c codeconv.h \
 	regex.c regex.h search.c search.h seed.c seed.h util.c util.h \
 	var.c var.h wakati.c wakati.h score.c score.h
 
-libnmz_la_DEPENDENCIES = @NMZ_LIBOBJS@
-libnmz_la_LIBADD = @NMZ_LIBOBJS@
+libnmz_la_DEPENDENCIES = @NMZ_LIBOBJS@ @LTALLOCA@
+libnmz_la_LIBADD = @NMZ_LIBOBJS@ @LTALLOCA@
 libnmz_la_LDFLAGS = -version-info $(LTVERSION)
 
 ##Bug in automake: Can't use `if MAINTAINER_MODE'
